// [START declaration]
syntax = "proto3";
package KindaGRPC;
// [END declaration]

message EmptyRequestPB {
}

message DescriptionPB {
    string value = 1;
}

message AvatarPB {
    int32 value = 1;
}

message PhotosOrderPB {
    repeated string order = 1;
}

message PhotoIdPB {
    string id = 1;
}

// [START authorization]
message AuthRequestPB {
    string token = 1;
}

message RegistrationRequestPB {
    string token = 1;
    string username = 2;
    GenderPB gender = 3;
    string birthDay = 4;
    LocationPB location = 5;
    repeated int32 personalityTest = 6 [packed = true];
    SearchParamsPB searchParams = 7;
}

message VerificationRequestPB {
    string token = 1;
    map<string, int32> orderedPhotoMap = 2;
}

enum GenderPB {
    FEMALE = 0;
    MALE = 1;
}

message LocationPB {
    double lat = 5;
    double lon = 6;
}

enum GenderPreferencePB {
    PREF_FEMALE = 0;
    PREF_BOTH = 1;
    PREF_MALE = 2;
}

message SearchParamsPB {
    GenderPreferencePB gender = 1;
    int32 minAge = 2;
    int32 maxAge = 3;
    int32 maxDistance = 4;
}
// [END authorization]

message BlindChatIdPB {
    string id = 1;
}

message UidPB {
    string id = 1;
}

message BlindChatMessagePB {
    string blindChatId = 1;
    string messageId = 2;
    string text = 3;
}

message ChatIdPB {
    string id = 1;
}

message ChatMessagePB {
    string chatId = 1;
    string messageId = 2;
    string text = 3;
}

enum ChoiceEnum {
    DISLIKE = 0;
    LIKE = 1;
}

message ChoicePB {
    string blindChatId = 1;
    ChoiceEnum choice = 2;
}