// [START declaration]
syntax = "proto3";
package OutgoingPB;
import "include/google/protobuf/any.proto";

enum HTTPStatusPB {
    SUCCESS = 0;
    BAD_REQUEST = 1;
    MISSING_REQUIRED_PARAMETER = 2;
    MALFORMED_PARAMETER = 3;
    INVALID_PARAMETER = 4;
    UNAUTHORIZED_REQUEST = 5;
    FORBIDDEN_REQUEST = 6;
    NOT_FOUND = 7;
    INTERNAL_SERVER_ERROR = 8;
}

message ServerResponseMessagePB {
    HTTPStatusPB code = 1;
    string newKey = 2;
    google.protobuf.Any data = 3;
}

enum DTOValidationErrorCodePB {
    DTO_FIELD_NOT_NULL = 0;
    DTO_FIELD_NOT_EMPTY = 1;
    DTO_FIELD_STRING = 2;
    DTO_AUTH_PROVIDER_NOT_SUPPORTED = 3;
    DTO_PERS_TEST_MUST_ARRAY = 4;
    DTO_PERS_TEST_SIZE = 5;
    DTO_PERS_TEST_TYPE = 6;
    DTO_FIELD_NUMBER = 7;
    DTO_FIELD_NUMBER_LIMIT = 8;
    DTO_LAT_LON_TOGETHER = 9;
    DTO_MIN_AGE = 10;
    DTO_ANONMESS_TYPE_ERR = 11;
    DTO_FLIED_MUST_BE_OBJECT_ID = 12;
    DTO_LOW_AND_HIGH_AGE_FAIL = 13;
}

message DTOValidationResponsePB {
    DTOValidationErrorCodePB code = 1;
    string dtoName = 2;
    string dtoField = 3;
}

message CollectionDTOValidationResponsePB {
    repeated DTOValidationResponsePB dtoValidation = 1;
}

message SimpleMessagePB {
    string message = 1;
}

message AuthResponsePB {
    string id = 1;
    string birthday = 2;
    string gender = 3;
    string first_name = 4;
    string email = 5;
}

message ServerIdsPB {
    string serverId = 1;
    string jid = 2;
    string username = 3;
}

message RegistrationResponsePB {
    string id = 1;
    string personality = 2;
}

message SessionPB {
    string serverSession = 1;
    string chatServerToken = 2;
}

// start search response
enum SearchPBStatus {
    IN_WAITING = 0;
}

message InWaitingSearchPB {
    int64 TTLDuration = 1;
}

message SearchPB {
    SearchPBStatus status = 1;
    InWaitingSearchPB inWaitingSearchPB = 2;
}
//end search response